--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NLW Expert</title>
+
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <h1>Teste seus conhecimentos</h1>
-
     <div id="quiz"></div>
-
     <template>
         <div class="quiz-item">
             <h3>
@@ -27,7 +26,11 @@
             </dl>
         </div>
     </template>
+
+    <div id="acertos">
+        <strong>Acertos</strong>
+        <span>0 de 10</span>
+    </div>
+
     <script src="./index.js"></script>
 </body>
-
-</html>
